--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Imports:
   agricolae (>= 1.3-5),
   agricolaeplotr (>= 0.2.2),
   devtools (>= 2.4.4)
-License: use_gpl3_license()
+License: GPL (>= 2.0)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
